[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/Firewall.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Firewall.gd" type="Script" id=2]
[ext_resource path="res://Scenes/PowerUpSoundPlayer.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 16 )

[sub_resource type="Animation" id=1]
resource_name = "Burn"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="Firewall" type="RigidBody2D"]
input_pickable = true
collision_layer = 8
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -16 )
texture = ExtResource( 1 )
hframes = 4
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Burn"
anims/Burn = SubResource( 1 )

[node name="PowerUpSoundPlayer" parent="." instance=ExtResource( 3 )]
[connection signal="input_event" from="." to="." method="_on_Firewall_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="finished" from="PowerUpSoundPlayer" to="." method="_on_PowerUpSoundPlayer_finished"]
